--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,10 @@
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 .shop-img {
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
@@ -19,6 +26,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background: rgba(102, 205, 102, 0.4);
 }
 
 main {
@@ -29,21 +37,16 @@ main {
     position: absolute;
 }
 
-@media (min-width: 768px) {
-
-    /*
-    md breakpoint in Bootstrap
-    made with the help of chatGPT
-    */
-
-    h1 {
-        margin-left: 0.5rem;
-        /* Equivalent to Bootstrap's ml-2 */
-    }
+h1 {
+    text-align: center;
 }
 
 .product {
     border: 2px solid black;
     border-style: dashed;
     border-radius: 10px;
+}
+
+a {
+    color: #e67e22;
 }
