--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="author" content="Alistair Driscoll">
         <meta name="viewport"
               content="width=device-width,.float: none;margin-left:0;margin-right:0;text-align:center;align-self: flex-start, initial-scale=1.0" />
         <meta name="description"
@@ -90,7 +91,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="container-fluid welcome-delivery-banner mt-0 mb-2">
+            <div class="container-fluid welcome-delivery-banner-base mt-0 mb-2">
                 <div class="row">
                     <div class="col-12 text-center">
                         <h3>We Deliver Worldwide!</h3>
