Add: Various margins, borders, styles to things, load static into success toast

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,7 +6,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 mb-3">
                 <h4 class="text-center">
                     <strong>Well hello, good visitor of my website!</strong>
                 </h4>
@@ -21,6 +21,7 @@
                     If you still don't believe the hype you can read more info on each of my teas that I post <a href="{% url 'blog' %}"><strong>on my blog.</strong></a>
                     Other ways to find out about our antics here you can go to your user profile page and subscribe to emails!
                 </p>
+                <p>Lastly, in order to buy any of our teas you must <strong>make an account with us!</strong> This makes sure your orders are always processed correctly.</p>
 
             </div>
 
