--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -50,7 +50,7 @@
                                href="{% url 'superuser_admin_page' %}"
                                class="btn">Back to Superuser admin</a>
                         {% else %}
-                        <a aria-label="Go back to shop" href="{% url 'shop' %}" class="btn">
+                        <a aria-label="Go back to shop" href="{% url 'shop' %}" class="btn mb-2">
                                 <span>Back to Shop</span>
                                 <span>
                                     <i class="fas fa-shopping-bag"></i>
