--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Taken from Code Institute's Boutique Ado walkthrough project -->
 <div class="toast custom-toast" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
