--- a/bag/templates/bag/bag_buttons.html
+++ b/bag/templates/bag/bag_buttons.html
@@ -36,8 +36,12 @@
 {% else %}
     <p><strong>You've already selected your free sample!</strong></p>
 
+    {% if request.user.is_authenticated %}
     <a href="{% url 'checkout' %}" class="btn btn-lg btn-primary" aria-label="Go to checkout">
         <strong>Proceed to Checkout</strong>
     </a>
+    {% else %}
+        <p>You must be logged in to go to checkout! <a href="{% 'account_login' %}">click here to sign in.</a></p>
+    {% endif %}
 {% endif %}
 
