--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,5 +48,15 @@ h1 {
 }
 
 a {
+    color: black;
+}
+
+.btn,
+button {
+    border-radius: 5px;
+    background-color: #e67e22;
+}
+
+strong {
     color: #e67e22;
 }
