Add: Correct spacing to account base.html file

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -71,11 +71,8 @@
             <h2>There are no items in your bag!</h2>
         {% endif %}
         <a href="{% url 'shop' %}"
-           class="btn btn-outline-black rounded-0 btn-lg">
-            <span class="icon">
-                <i class="fas fa-chevron-left"></i>
-            </span>
-            <span class="text-uppercase">Go to Shop</span>
+           class="btn btn-outline-black">
+            <span>Back to Shop</span>
         </a>
     </div>
 
