--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,7 @@ main {
 
 .message-container {
     position: absolute;
+    z-index: 1000;
 }
 
 h1 {
@@ -55,8 +56,13 @@ a {
 button {
     border-radius: 5px;
     background-color: #e67e22;
+    border: 1px solid black;
 }
 
 strong {
     color: #e67e22;
+}
+
+#account-base {
+    max-width: 400px;
 }
