--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-6">
-      {% block inner_content %}
-      {% endblock inner_content %}
+<div id="account-base" class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="w-100">
+        {% block inner_content %}{% endblock %}
     </div>
-  </div>
 </div>
 {% endblock content %}
+
