--- a/templates/base.html
+++ b/templates/base.html
@@ -133,13 +133,13 @@
             {% block content %}
             {% endblock content %}
         </main>
-        <footer class="text-center mt-3">
+        <footer class="text-center mt-3 bg-light pt-3">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 mx-auto">
+                    <div class="col-12 mx-auto border-bottom">
                         <h4>Contact:</h4>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 mt-3">
                         <p>
                             <a aria-label="Link to Facebook"
                                href="https://facebook.com"
@@ -147,7 +147,7 @@
                                target="_blank"><span class="fab fa-facebook-f" aria-hidden="true"></span> Find us on Facebook!</a>
                         </p>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 mt-3">
                         <p>
                             Or go to our <a aria-label="Go to about page" href="{% url 'about_us' %}">About Us</a> page to fill out the enquiry form!
                         </p>
