--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Taken from Code Institute's Boutique Ado walkthrough project -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-danger"></div>
@@ -5,7 +7,7 @@
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Error!</strong>
         <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true">X</span>
         </button>
     </div>
     <div class="toast-body bg-white">
