--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Taken from Code Institute's Boutique Ado walkthrough project -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-warning"></div>
