--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="account-base" class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="w-100">
-        {% block inner_content %}{% endblock %}
+        {% block inner_content %}{% endblock inner_content %}
     </div>
 </div>
 {% endblock content %}
