--- a/bag/templates/bag/bag_buttons.html
+++ b/bag/templates/bag/bag_buttons.html
@@ -38,7 +38,7 @@
 
     {% if request.user.is_authenticated %}
     <a href="{% url 'checkout' %}" class="btn btn-lg btn-primary" aria-label="Go to checkout">
-        <strong>Proceed to Checkout</strong>
+        Proceed to Checkout
     </a>
     {% else %}
         <p>You must be logged in to go to checkout! <a href="{% url 'account_login' %}">click here to sign in.</a></p>
