--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <meta name="author" content="Alistair Driscoll">
-        <meta name="viewport"
-              content="width=device-width,.float: none;margin-left:0;margin-right:0;text-align:center;align-self: flex-start, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
               content="I travel the world looking for the best teas to sell from my shop based in Leeds. Although based there I ship worldwide! I also built this website to be a great place to find out more about loose leaf teas so there should be plenty for you to click on if you want to learn about it!">
         <meta name="keywords"
@@ -24,9 +23,9 @@
               rel="stylesheet">
         <!-- Bootstrap 4 -->
         <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
+              href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
         <!-- My CSS -->
-        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <!-- Extra custom CSS -->
         {% block extra_css %}
         {% endblock extra_css %}
@@ -165,7 +164,7 @@
         <script src="https://js.stripe.com/v3/"></script>
         <!-- Extra custom JS -->
         {% block extra_js %}
-            <script type="text/javascript">
+            <script>
             $(document).ready(function() {
             $(".toast").toast("show");
         });
