--- a/brewsreviews/templates/brewsreviews/blog_post.html
+++ b/brewsreviews/templates/brewsreviews/blog_post.html
@@ -8,7 +8,7 @@
             <div class="col-12 col-lg-8 mx-auto">
                 <div class="row">
                     <div class="col-6">
-                        <img src="{{ post.tea.picture.url }}" alt="{{ post.tea.name }}" width="100%" height="auto">
+                        <img class="shop-img" src="{{ post.tea.picture.url }}" alt="{{ post.tea.name }}" width="330" height="330">
                     </div>
                     <div class="col-6 d-flex flex-column align-items-center justify-content-center">
                         <p>Starting from £{{ post.tea.base_price_number }}!</p>
