--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -34,14 +34,14 @@
                             <img class="shop-img mx-auto product-img mb-3"
                                  src="{% static 'images/camellia-sinensis.jpg' %}"
                                  alt="Camellia sinensis plant"
-                                 width="100%"
-                                 height="auto">
+                                 width="350"
+                                 height="270">
                         {% else %}
                             <img class="shop-img mx-auto product-img mb-3"
                                  src="{{ product.picture.url }}"
                                  alt="{{ product.name }}"
-                                 width="100%"
-                                 height="auto">
+                                 width="350"
+                                 height="270">
                         {% endif %}
 
                         <div class="text-left w-80">
