--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -30,9 +30,9 @@
                     <div class="row">
                         <div class="col-2 my-2">
                             <a aria-label="View product page" href="{% url 'product_detail' sku=item.product.sku %}">
-                                <img class="border rounded mr-3"
-                                     width="100px"
-                                     height="auto"
+                                <img class="border rounded mr-3 shop-img"
+                                     width="200"
+                                     height="200"
                                      {% if "placeholder" in item.product.picture.url %}
                                         src="{% static 'images/camellia-sinensis.jpg' %}"
                                      {% else %}
