--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,8 @@ html {
 .shop-img {
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: auto;
 }
 
 .heavier-font {
