Tweak to settings file to make login username only, slight tweak to blog_post html

--- a/brewsreviews/templates/brewsreviews/blog_post.html
+++ b/brewsreviews/templates/brewsreviews/blog_post.html
@@ -19,7 +19,7 @@
             {% endif %}
             <div class="col-12 col-lg-8 mx-auto">
                 <h1>{{ post.title }}</h1>
-                <p>{{ post.content|linebreaks }}</p>
+                {{ post.content|linebreaks }}
             </div>
         </div>
     </div>
