--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -21,7 +21,7 @@
                     If you still don't believe the hype you can read more info on each of my teas that I post <a href="{% url 'blog' %}"><strong>on my blog.</strong></a>
                     Other ways to find out about our antics here you can go to your user profile page and subscribe to emails!
                 </p>
-                <p>Lastly, in order to buy any of our teas you must <strong>make an account with us!</strong> This makes sure your orders are always processed correctly.</p>
+                <p>Lastly, in order to buy any of our teas you must <a href="{% url 'account_signup' %}"><strong>make an account with us!</strong></a> This makes sure your orders are always processed correctly.</p>
 
             </div>
 
