Fix: URL for login in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                                 </li>
                             {% else %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ login_url }}">Sign-in/Register</a>
+                                    <a class="nav-link" href="{% url 'account_login' %}">Sign-in/Register</a>
                                 </li>
                             {% endif %}
 
