Changes in templates for UX, more strong elements added

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -28,22 +28,21 @@
                 {% else %}
                     <p>
                         You aren't currently subscribed to our email marketing service, to do so follow our <a href="{% url 'edit_profile' userkey=profile.user.pk %}"
-    aria-label="Manage your account information"
-    class="btn">Profile Management link!</a>
+    aria-label="Manage your account information">Profile Management link!</a>
                     </p>
                 {% endif %}
                 <div id="info-div">
                     {% if user.user_profile.full_name %}<p class="display-info">{{ user.user_profile.full_name }}</p>{% endif %}
-                    {% if user.user_profile.email %}<p class="display-info">{{ user.user_profile.email }}</p>{% endif %}
-                    {% if user.user_profile.phone_number %}<p class="display-info">{{ user.user_profile.phone_number }}</p>{% endif %}
-                    {% if user.user_profile.address_line1 %}<p class="display-info">{{ user.user_profile.address_line1 }}</p>{% endif %}
-                    {% if user.user_profile.address_line2 %}<p class="display-info">{{ user.user_profile.address_line2 }}</p>{% endif %}
-                    {% if user.user_profile.town_or_city %}<p class="display-info">{{ user.user_profile.town_or_city }}</p>{% endif %}
+                    {% if user.email %}<p class="display-info"><strong>Your Email: </strong>{{ user.email }}</p>{% endif %}
+                    {% if user.user_profile.phone_number %}<p class="display-info"><strong>Phone Number: </strong>{{ user.user_profile.phone_number }}</p>{% endif %}
+                    {% if user.user_profile.address_line1 %}<p class="display-info"><strong>Address line 1: </strong>{{ user.user_profile.address_line1 }}</p>{% endif %}
+                    {% if user.user_profile.address_line2 %}<p class="display-info"><strong>Address line 2: </strong>{{ user.user_profile.address_line2 }}</p>{% endif %}
+                    {% if user.user_profile.town_or_city %}<p class="display-info"><strong>Town or City: </strong>{{ user.user_profile.town_or_city }}</p>{% endif %}
                     {% if user.user_profile.state_or_region %}
-                        <p class="display-info">{{ user.user_profile.state_or_region }}</p>
+                        <p class="display-info"><strong>State or Region: </strong>{{ user.user_profile.state_or_region }}</p>
                     {% endif %}
-                    {% if user.user_profile.postal_code %}<p class="display-info">{{ user.user_profile.postal_code }}</p>{% endif %}
-                    {% if user.user_profile.country %}<p class="display-info">{{ user.user_profile.country }}</p>{% endif %}
+                    {% if user.user_profile.postal_code %}<p class="display-info"><strong>Postcode: </strong>{{ user.user_profile.postal_code }}</p>{% endif %}
+                    {% if user.user_profile.country %}<p class="display-info"><strong>Country: </strong>{{ user.user_profile.country }}</p>{% endif %}
                 </div>
                 <a href="{% url 'edit_profile' userkey=profile.user.pk %}"
                    aria-label="Manage your account information"
