--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div id="account-base" class="container d-flex justify-content-center align-items-center min-vh-100">
+<div id="account-base" class="container d-flex justify-content-center min-vh-100">
     <div class="w-100">
         {% block inner_content %}{% endblock inner_content %}
     </div>
