--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -28,7 +28,7 @@
                 {% else %}
                     <p>
                         You aren't currently subscribed to our email marketing service, to do so follow our <a href="{% url 'edit_profile' userkey=profile.user.pk %}"
-    aria-label="Manage your account information">Profile Management link!</a>
+    aria-label="Manage your account information"><strong>Profile Management link!</strong></a>
                     </p>
                 {% endif %}
                 <div id="info-div">
