--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,7 @@ html {
 .bag-img {
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    height: auto;
 }
 
 .heavier-font {
